# Transcoder

./: .gitignore  docker-compose.yml
api-gateway/: go.mod  job.go  main.go
worker/: Cargo.toml
worker/src/: job.rs  lib.rs  main.rs  options.rs  s3.rs  transcoder.rs
