[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.3"
aws-sdk-s3 = "1.86.0"
env_logger = "0.11.8"
hostname = "0.4.1"
http-body-util = "0.1.3"
log = "0.4.27"
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
